--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ p {
   margin: 0 auto;
   padding: 0 24px;
 }
+* {
+  padding: 0px;
+  margin: 0px;
+}
 /* search-box */
 .search-box {
   background-color: #ffffff;
@@ -97,6 +101,16 @@ p {
 }
 
 /* sections */
+.hero-button {
+  display: flex;
+  gap: 34px;
+  align-items: center;
+}
+.section-hero-teible {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
 .section-hero {
   padding: 0;
 }
@@ -105,6 +119,7 @@ p {
   color: #353434;
   font-size: 45px;
   font-weight: 400;
+  margin-bottom: 18px;
 }
 .hero {
   padding-top: 152px;
@@ -114,22 +129,53 @@ p {
   color: #ff5c00;
 }
 .hero-text {
+  color: #a8a8a8;
   font-size: 14px;
+  margin-bottom: 30px;
 }
 /* section-awards */
 .section-awards {
   padding-top: 32px;
   padding-bottom: 6px;
 }
+.awards-img {
+  display: flex;
+  align-items: center;
+  gap: 85px;
+}
 /* sections video */
+.columns-table {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.columns-text-accent {
+  font-size: 16px;
+}
+.text-one {
+  margin-right: 190px;
+}
+.text-two {
+  margin-right: 187px;
+}
+.text-three {
+  margin-right: 234px;
+}
+.taible-video {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
 .smal-text {
   color: #ff5c00;
   font-size: 12px;
+  margin-bottom: 19px;
 }
 .search-section {
   font-family: 'Oswald', 'sans-serif';
   color: #353434;
   font-size: 40px;
+  margin-bottom: 46px;
 }
 .columns {
   background-color: #f5f7ff;
@@ -137,26 +183,32 @@ p {
   border-radius: 8px;
   font-size: 16 px;
   font-weight: 600;
+  padding: 14px 14px;
+  margin-bottom: 22px;
 }
 .columns-text {
   font-weight: 400;
   font-size: 12px;
   color: #a8a8a8;
+  margin-left: 48px;
 }
 .numer-one {
   color: #9444c9;
   background-color: #f3e0ff;
   border-radius: 6px;
+  padding: 8px 12px;
 }
 .numer-two {
   color: #626fff;
   background-color: #e7e9fe;
   border-radius: 6px;
+  padding: 8px 12px;
 }
 .numer-three {
   color: #ff5c00;
   background-color: #ffdecc;
   border-radius: 6px;
+  padding: 8px 12px;
 }
 /* taitke us */
 .taitle-us {
@@ -331,6 +383,7 @@ p {
   background: transparent;
   border: none;
   font-size: 16px;
+  padding: 5px 5px;
 }
 .button-pley:hover {
   background-color: #ffffff;
@@ -350,6 +403,8 @@ p {
   border: 2px solid #bdbbd9;
   border-radius: 6px;
   font-size: 16px;
+  width: 150px;
+  height: 44px;
 }
 .button-taitle:hover {
   color: #ffffff;
