--- a/style.css
+++ b/style.css
@@ -158,6 +158,9 @@ p {
 .text-two {
   margin-right: 187px;
 }
+.text-two-t {
+  margin-bottom: 10px;
+}
 .text-three {
   margin-right: 234px;
 }
@@ -211,40 +214,76 @@ p {
   padding: 8px 12px;
 }
 /* taitke us */
+.columns-compas {
+  padding: 40px 40px;
+}
+.columns-us-table {
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+}
+.columns-us-table:hover {
+  background-color: #f9faff;
+  border-radius: 20px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+}
 .taitle-us {
   font-size: 40px;
   color: #353434;
+  text-align: center;
+  margin-bottom: 20px;
 }
 .text-us {
   font-size: 14px;
   color: #a8a8a8;
+  text-align: center;
+}
+.text-us-accent {
+  margin: 0px 200px;
+}
+.text-us-accent-t {
+  margin-bottom: 45px;
+}
+.columns-us {
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 .compass-one {
   background-color: #6156dc;
   border-radius: 7px;
+  padding: 10px;
+  margin-bottom: 22px;
 }
 .compass-two {
   background-color: #ef6010;
   border-radius: 7px;
+  padding: 10px;
+  margin-bottom: 22px;
 }
 .compss-three {
   background-color: #a73eed;
   border-radius: 7px;
+  padding: 10px;
+  margin-bottom: 22px;
 }
 .Trusted {
   font-size: 20px;
   font-weight: 600;
   color: #323232;
+  margin-bottom: 15px;
 }
 .Easy-to-Use {
   font-size: 20px;
   font-weight: 600;
   color: #323232;
+  margin-bottom: 15px;
 }
 .Faster {
   font-size: 20px;
   font-weight: 600;
   color: #323232;
+  margin-bottom: 15px;
 }
 .text-t {
   font-size: 14px;
@@ -262,25 +301,69 @@ p {
 /* sections job */
 .card-h3 {
   font-size: 20px;
+  margin-bottom: 16px;
 }
 .title-jobs {
   color: #353434;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.text-job-centr {
+  margin: 0px 100px;
 }
 .text-job {
   color: #a8a8a8;
+  text-align: center;
+  margin-bottom: 80px;
+}
+.heard-button {
+  display: flex;
+  align-items: center;
+  gap: 29px;
+}
+.card-boy-one {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 45px;
+}
+.button-main-flex {
+  display: flex;
+  justify-content: center;
 }
 .card {
   background-color: #ffffff;
   border-radius: 20px;
   color: #323232;
   font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 47px 47px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+}
+.money-card {
+  margin-bottom: 14px;
+}
+.gps-card {
+  margin-bottom: 33px;
+}
+.card-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 65px;
+  margin-bottom: 76px;
 }
 .card:hover {
   background-color: #f9faff;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
 }
 .subtitle {
   font-size: 14px;
   color: #4238af;
+  margin-bottom: 46px;
+  display: flex;
+  justify-content: center;
 }
 .jobs_card_accent {
   font-size: 14px;
@@ -416,12 +499,16 @@ p {
   background-color: #bdbbd9;
   border-radius: 47px;
   border: 2px solid #bdbbd9;
+  font-size: 16px;
+  padding: 15px 25px;
 }
 .button_people_two {
   color: #38318b;
   background-color: #bdbbd9;
   border-radius: 47px;
   border: 2px solid #bdbbd9;
+  font-size: 16px;
+  padding: 15px 25px;
 }
 .button_people_one:hover {
   color: #ffffff;
@@ -439,6 +526,7 @@ p {
   background-color: #bdbbd9;
   border-radius: 47px;
   border: 2px solid #bdbbd9;
+  padding: 15px 25px;
 }
 .button_main_Jobs:hover {
   color: #ffffff;
