--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ p {
 .flex-heder {
   display: flex;
   align-items: center;
+  gap: 60px;
+}
+.header-box {
+  display: flex;
+  align-items: center;
+  gap: 26px;
 }
 .header-nav-text {
   background-color: #f5f7ff;
@@ -79,7 +85,7 @@ p {
 }
 .header-font-link {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   font-family: 'Open Sans', 'sans-serif';
   font-size: 14px;
   font-weight: 400;
@@ -370,6 +376,11 @@ p {
   color: #a8a8a8;
 }
 /* sections reviews */
+.star-img {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 8px;
+}
 .kolumn-us {
   display: flex;
   gap: 26px;
@@ -443,56 +454,130 @@ p {
   color: #ffffff;
 }
 /* sections price */
+.buttom-price {
+  display: flex;
+  justify-content: center;
+}
+.blok-text {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 47px;
+}
+.prise-text-t {
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
+}
+.blok-price {
+  max-width: 250px;
+  padding: 62px 66px;
+}
+.price-blok-flex {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 110px;
+}
 .price {
   font-family: 'Oswald', 'sans-serif';
   font-size: 40px;
   color: #353434;
+  text-align: center;
+  margin-bottom: 20px;
 }
+
 .price_text {
   font-size: 14px;
   color: #959595;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  max-width: 543px;
+  margin: 0 auto;
+}
+.price-text-b {
+  margin-bottom: 67px;
 }
 .price_card {
   background-color: #ffffff;
   border-radius: 20px;
   font-size: 14px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
 }
 .price_card:hover {
   background-color: #f9faff;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
 }
 .subtitle_price {
   font-weight: 600;
   font-size: 20px;
   color: #4238af;
+  margin-bottom: 31px;
+  text-align: center;
 }
 .price_number {
   color: #353434;
+
+  font-size: 45px;
+  margin-bottom: 24px;
+  text-align: center;
 }
 .price_text_vercion {
   font-size: 16px;
   color: #8a86b9;
+  margin-bottom: 71px;
+  text-align: center;
 }
 .subtitle_price_text {
   color: #a8a8a8;
 }
+
 /* sections footer */
+.footer-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 101px;
+}
 .title_footer {
   padding-top: 60px;
   background-color: #dbe2ff;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
 .subtitle_footer {
   font-family: 'Oswald', 'sans-serif';
   font-size: 24px;
   color: #353434;
+  margin-bottom: 28px;
 }
 .footer_text {
+  width: 400;
   font-size: 16px;
   color: #717171;
 }
 .footer_link {
+  display: flex;
+  justify-content: center;
   font-weight: 600;
   font-size: 12px;
   color: #3a2e5c;
+  gap: 65px;
+}
+.footer_text li {
+  margin-bottom: 20px;
+}
+.taible-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 130px;
+  padding-bottom: 12px;
+}
+.footer-buttom {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 /* button */
 .button-pley {
@@ -574,6 +659,7 @@ p {
   background-color: #bdbbd9;
   border-radius: 50px;
   border: 2px solid #bdbbd9;
+  padding: 13px 23px;
 }
 .button_free:hover {
   color: #ffffff;
@@ -586,6 +672,7 @@ p {
   background-color: #bdbbd9;
   border-radius: 50px;
   border: 2px solid #bdbbd9;
+  padding: 13px 23px;
 }
 .button_premium:hover {
   color: #ffffff;
@@ -598,9 +685,19 @@ p {
   background-color: #bdbbd9;
   border-radius: 50px;
   border: 2px solid #bdbbd9;
+  padding: 13px 23px;
 }
 .button_platnium:hover {
   color: #ffffff;
   background-color: #544cac;
   border-color: #544cac;
+}
+.buttom-link {
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 5px;
+  margin-right: 10px;
+  border: 3px solid #ffffff;
+  display: flex;
+  align-items: center;
 }
